# back-end--Ki4You-

./: README.md
backend/: alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/app/: asym.ipynb  config.py  distance_similarity_asym.py  main.py  recommendation_system.py  schema.py
backend/app/controller/: recommend.py  tree_data.py
backend/app/model/: __init__.py  tree_data.py
backend/app/repository/: tree_data.py
backend/migrations/: env.py
backend/migrations/versions/: 22987be49ce7_init_table.py  63130f95ef30_add_list_of_prices.py  7e997b8e5ace_add_ref_image.py
